geom/src/sql/Tests/geom_surface.stable.err.Five
stderr of test 'geom_surface` in directory 'src/sql` itself:


# 21:15:15 >  
# 21:15:15 >  Mtimeout -timeout 180 Mserver "--config=/ufs/niels/scratch/monetdb/Linux-x86_64/etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/ufs/niels/scratch/monetdb/Linux-x86_64/lib/MonetDB4:/ufs/niels/scratch/monetdb/Linux-x86_64/lib/MonetDB4/lib:/ufs/niels/scratch/monetdb/Linux-x86_64/lib/MonetDB4/bin" --set "gdk_dbfarm=/ufs/niels/scratch/monetdb/Linux-x86_64/var/MonetDB4/dbfarm" --set "sql_logdir=/ufs/niels/scratch/monetdb/Linux-x86_64/var/MonetDB4/sql_logs" --set "xquery_logdir=/ufs/niels/scratch/monetdb/Linux-x86_64/var/MonetDB4/xquery_logs" --set mapi_port=36438 --set xrpc_port=48112 --set monet_prompt= --trace "--dbname=mTests_src_sql" --dbinit="module(geom);module(sql_server); module(sql_server);" ; echo ; echo Over..
# 21:15:15 >  

MAPI  = monetdb@koala:39306
QUERY = INSERT INTO surfaces values ('LINESTRING(10 10, 20 20)');
ERROR = !MALException:wkb.FromText:Geometry type 'Polygon' not found
MAPI  = monetdb@koala:39306
QUERY = INSERT INTO surfaces values ('LINESTRING(10 10, 20 20, 30 40)');
ERROR = !MALException:wkb.FromText:Geometry type 'Polygon' not found
MAPI  = monetdb@koala:39306
QUERY = INSERT INTO surfaces values ('POINT(10 10)');
ERROR = !MALException:wkb.FromText:Geometry type 'Polygon' not found
MAPI  = monetdb@koala:39306
QUERY = INSERT INTO surfaces values ('POLYGON(10 10)');
ERROR = !MALException:wkb.FromText:!ERROR: ParseException: Expected word but encountered number: 10
        !ERROR: ParseException: Expected word but encountered number: 10
MAPI  = monetdb@corona:38025
QUERY = INSERT INTO surfaces values ('POLYGON(10)');
ERROR = !MALException:wkb.FromText:!ERROR: ParseException: Expected word but encountered number: 10
        !ERROR: ParseException: Expected word but encountered number: 10
MAPI  = monetdb@corona:38025
QUERY = INSERT INTO surfaces values ('POLYGON()');
ERROR = !MALException:wkb.FromText:!ERROR: ParseException: Expected 'EMPTY' or '(' but encountered : ')'
        !ERROR: ParseException: Expected 'EMPTY' or '(' but encountered : ')'
MAPI  = monetdb@koala:39306
QUERY = INSERT INTO surfaces values ('POLYGON');
ERROR = !MALException:wkb.FromText:!ERROR: ParseException: Expected word but encountered end of stream
        !ERROR: ParseException: Expected word but encountered end of stream
MAPI  = monetdb@koala:39306
QUERY = INSERT INTO surfaces values ('');
ERROR = !MALException:wkb.FromText:!ERROR: ParseException: Expected word but encountered end of stream
        !ERROR: ParseException: Expected word but encountered end of stream

# 21:15:15 >  
# 21:15:15 >  Done.
# 21:15:15 >  

